# HongKongTechJobsDashboard

./: README.md  app.py  pyproject.toml
.github/workflows/: daily-scrape.yml
data/processed/: google_trends.csv  jobsdb_listings_clean.csv  jobsdb_search_snapshots_clean.csv
data/raw/: jobsdb_job_listings.csv  jobsdb_search_snapshots.csv
data/reference/: salary_benchmarks.csv
scraper/: main.py  models.py  parsers.py
src/hk_tech_job_market_dashboard/: __init__.py  cli.py  config.py  jobsdb_parser.py  jobsdb_pipeline.py  trends.py
